--- a/templates/user_page.html
+++ b/templates/user_page.html
@@ -10,19 +10,7 @@
 </head>
 
 <body>
-
-    <form method="post" enctype="multipart/form-data" action="">
-        {% csrf_token %}
-        <input required name="allimages" type="file" multiple>
-        <button type="submit">Upload</button>
-    </form>
-    ---------------------------------------------------------
-    <br>
-    {% for i in imagesObjects %}
-    <br>
-    <img src="" alt="Cool">
-    {% endfor %}
-
+    Hello world
 
 
 </body>
