--- a/templates/deploy.html
+++ b/templates/deploy.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <title>MetaConnect</title>
@@ -38,7 +39,7 @@
             <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item li-color">
-                        <a class="nav-link" href="#">Home </i></a>
+                        <a class="nav-link" href="#">Dashboard </i></a>
                     </li>
                 </ul>
             </div>
@@ -54,6 +55,12 @@
         </pre>
     </div>
 
+    <div class="footer">
+        <br>
+        <strong>MetaConnect</strong>
+        <br>
+        <span style="align-content:center; font-size:12px">Ⓒ2022</span>
+    </div>
 </body>
 
 </html>
