--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,15 @@
   <script src="https://unpkg.com/moralis/dist/moralis.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+  integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+  <style>
+    .footer {
+      width: 100%;
+      background-color:  #1b1925;
+      color: white;
+      text-align: center;
+    }
+  </style>
 
 </head>
 
@@ -32,8 +40,8 @@
           </li>
         </ul>
         <div>
-          <button style="color:black;border-radius: 50px" class="btn btn-warning" id="login" onclick="login()"><strong
-              style="font-weight: 550;"></strong>Login with Metamask</strong></button>
+          <button style="border-radius:50px" class="btn btn-warning" id="login" onclick="login()"><strong
+              style="color:black; font-weight: 600;">Login with Metamask🦊</strong></button>
         </div>
       </div>
     </div>
@@ -113,14 +121,22 @@
                   <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/draw1.webp"
                     class="img-fluid" alt="Sample image">
                 </div>
-  </section>
-  </div>
-  </div>
-  </div>
-  </div>
-  </div>
-  </div>
-  </section>
+       </section>
+        </div>
+        </div>
+        </div>
+        </div>
+        </div>
+        </div>
+        </section>
+
+        <div class="footer">
+          <br>
+          <strong>MetaConnect</strong>
+          <br>
+          <span style="align-content:center; font-size:12px">Ⓒ2022</span>
+        </div>
+        
 
   <script>
     Moralis.initialize("z7dlyVtNRv6S9Iq4I8d2hXTQLsuquVUwRjmqH0mq"); // Application id from moralis.io
@@ -138,7 +154,7 @@
         if (user.get('ethAddress')) {
           wallet = user.get('ethAddress');
           console.log(wallet);
-          document.getElementById('login').innerText = wallet;
+          document.getElementById('login').innerText = '👛 '+ wallet.slice(0, 8) + '.....';
           document.getElementById('js_data_input').value = wallet;
         }
       });
