--- a/templates/user_page.html
+++ b/templates/user_page.html
@@ -9,6 +9,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <title>MetaConnect</title>
+    <style>
+        .footer {
+            width: 100%;
+            background-color:  #1b1925;
+            color: white;
+            text-align: center;
+        }
+    </style>
 </head>
 
 <body>
@@ -24,28 +32,44 @@
             <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item li-color">
-                        <a class="nav-link" href="#">Home </i></a>
+                        <a class="nav-link" href="#">Dashboard </i></a>
                     </li>
                 </ul>
             </div>
+            <button style="border-radius:50px" class="btn btn-warning" id="login" onclick="login()"><strong
+                style="color:black; font-weight: 600;">👛 {{walletdetails.owneraddress|slice:8}}.....</strong></button>
+          </div>
         </div>
         </div>
         </div>
     </nav>
+    <hr>
+
     <div class="container">
 
-        {{walletdetails.owneraddress}}
-        <br>
-        {{project.name}}
-        <br>
+        <table class="table table-sm table-dark">
+            <tbody>
+              <tr>
+                <td>Name</td>
+                <td>{{project.name}} </td>
+              </tr>
+              <tr>
+                <td>Symbol</td>
+                <td>{{project.symbol}}</td>
+              </tr>
+              <tr>
+                <td>Description</td>
+                <td>{{project.description}}</td>
+              </tr>
+            </tbody>
+        </table>
+        <hr>
 
         <div class="container">
             <br>
             <center>
-                <img src="/images/{{project.image}}" class="img-fluid" style="width: 50%;" />
+                <img src="/images/{{project.image}}" class="img-fluid" style="width: 30%;"/>
             </center>
-            <br>
-            <br>
             <br>
         </div>
 
@@ -56,7 +80,15 @@
                 <input type="submit" class="btn btn-primary btn-lg" value="Upload to IPFS">
             </div>
         </form>
+        <br>
     </div>
+
+    <div class="footer">
+        <br>
+        <strong>MetaConnect</strong>
+        <br>
+        <span style="align-content:center; font-size:12px">Ⓒ2022</span>
+      </div>
 
 </body>
 
